# solo_mujoco

./: CMakeLists.txt  README.md  package.xml  real_solo_interface.xml  solo_mujoco_simulator.xml
config/: controllers.yaml
include/master_board_sdk/: defines.h  protocol.h
include/solo_mujoco/: ik_solver.hpp  mujoco_simulator.hpp  real_solo_interface.hpp  sit.hpp  steer.hpp  system_interface.hpp  task.hpp  trot_walker.hpp
launch/: real_solo.launch.py  simulate.launch.py
msg/: Footstep.msg  FootstepArray.msg
mujoco/: actuators.xml  contacts.xml  floorplane.xml  sensors.xml  shared.xml  solo8_robot.xml  world_fixed.xml  world_unconstrained.xml
src/: mujoco_simulator.cpp  real_solo_interface.cpp  system_interface.cpp
src/tasks/: task_controller.cpp
src/tasks/sit/: sit.cpp
src/tasks/steer/: steer.cpp
src/tasks/walking/: gait_planner.cpp  ik_solver.cpp  trot_walker.cpp  zmp_controller.cpp
src/walking/: footstep_planner_node.cpp  gait_planner.cpp  ik_solver.cpp  quad_walker.cpp  sit_task.cpp  zmp_controller.cpp
urdf/: joint_interface.xacro  leg.xacro  solo8.urdf.xacro
